--- a/package.json
+++ b/package.json
@@ -5,22 +5,31 @@
   "repository": "https://github.com/ryanwiemer/gatsby-starter-gcn",
   "author": "Ryan Wiemer <ryan@ryanwiemer.com>",
   "dependencies": {
+    "@types/leaflet": "1.0",
+    "@types/react-redux": "^7.1.7",
+    "antd": "^3.26.6",
     "babel-plugin-styled-components": "^1.10.1",
     "chalk": "^2.4.2",
     "contentful-import": "^7.5.0",
     "gatsby": "^2.9.4",
     "gatsby-image": "^2.1.4",
+    "gatsby-plugin-antd": "^2.1.0",
     "gatsby-plugin-canonical-urls": "^2.0.13",
     "gatsby-plugin-catch-links": "^2.0.15",
     "gatsby-plugin-feed": "^2.2.3",
     "gatsby-plugin-google-analytics": "^2.0.21",
+    "gatsby-plugin-less": "^3.0.17",
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-netlify": "^2.0.17",
     "gatsby-plugin-nprogress": "^2.0.10",
     "gatsby-plugin-offline": "^2.1.3",
+    "gatsby-plugin-purgecss": "^4.0.1",
     "gatsby-plugin-react-helmet": "^3.0.12",
+    "gatsby-plugin-react-redux": "^1.1.0-0",
+    "gatsby-plugin-sass": "^2.1.26",
     "gatsby-plugin-sitemap": "^2.1.0",
     "gatsby-plugin-styled-components": "^3.0.7",
+    "gatsby-plugin-typescript": "^2.1.27",
     "gatsby-remark-autolink-headers": "^2.0.18",
     "gatsby-remark-images-contentful": "^2.0.13",
     "gatsby-remark-prismjs": "^3.2.11",
@@ -36,7 +45,9 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
-    "styled-components": "^4.3.1"
+    "react-redux": "^7.1.3",
+    "styled-components": "^4.3.1",
+    "typescript": "^3.7.5"
   },
   "keywords": [
     "gatsby"
@@ -44,7 +55,7 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
-    "develop": "gatsby develop",
+    "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "npm run build && gatsby serve",
     "test": "npm run lint:css && npm run lint:js && npm run check-pretty",
