--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
-    "start": "gatsby develop",
-    "build": "gatsby build",
+    "start": "gatsby clean & gatsby develop",
+    "build": "gatsby clean & gatsby build",
     "serve": "npm run build && gatsby serve",
     "test": "npm run lint:css && npm run lint:js && npm run check-pretty",
     "setup": "node ./bin/setup.js",
