--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-redux": "^7.1.3",
+    "source-map-support": "^0.5.16",
     "styled-components": "^4.3.1",
+    "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
   },
   "keywords": [
