--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "repository": "https://github.com/ryanwiemer/gatsby-starter-gcn",
   "author": "Ryan Wiemer <ryan@ryanwiemer.com>",
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@types/leaflet": "1.0",
     "@types/react-redux": "^7.1.7",
     "antd": "^3.26.6",
+    "apollo-boost": "^0.4.7",
     "babel-plugin-styled-components": "^1.10.1",
     "chalk": "^2.4.2",
     "contentful-import": "^7.5.0",
@@ -35,9 +37,11 @@
     "gatsby-remark-prismjs": "^3.2.11",
     "gatsby-source-contentful": "^2.0.71",
     "gatsby-source-filesystem": "^2.0.39",
+    "gatsby-source-graphql": "^2.1.34",
     "gatsby-transformer-remark": "^2.4.0",
     "global": "^4.4.0",
     "inquirer": "^6.3.1",
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "path": "^0.12.7",
